--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  display: flex;
+  
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+
 }
 
 .App-logo {
